.metadata/.plugins/org.eclipse.cdt.ui/ThinkCell.build.log
20:02:23 **** Build of configuration Debug for project ThinkCell ****
make all 
Building file: ../interval_map.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"interval_map.d" -MT"interval_map.d" -o "interval_map.o" "../interval_map.cpp"
../interval_map.cpp: In member function ‘void interval_map<K, V>::assign(const K&, const K&, const V&)’:
../interval_map.cpp:35:6: error: expected ‘;’ before ‘}’ token
      }
      ^
../interval_map.cpp: In function ‘int main(int, char**)’:
../interval_map.cpp:51:21: error: ‘IntervalMapTest’ was not declared in this scope
     IntervalMapTest();
                     ^
subdir.mk:18: recipe for target 'interval_map.o' failed
make: *** [interval_map.o] Error 1

20:02:25 Build Finished (took 1s.257ms)

